Fix left alignment of text between sections; Footer part of recipe section

--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,16 @@
   --clr-neutral-100: #fff;
   --clr-neutral-900: #030303;
   --clr-primary-400: #FF3369;
+
+  --recipe-offset: 5em;
+  --container-padding: 1em;
+  --container-max-width: 70rem;
 }
 
-@media (min-width: 80em) {
+@media (min-width: 48em) {
   :root {
     --fs-600: 1.75rem;
+    --container-padding: 2em;
   }
 }
 
@@ -56,10 +61,6 @@ body {
   background-color: rgb(223, 221, 213);
 }
 
-section {
-  padding: 2.5rem 0;
-}
-
 /* Typography */
 
 .page-title,
@@ -86,9 +87,9 @@ h2 {
 /* Utility classes */
 
 .container {
-  max-width: 70rem;
+  max-width: var(--container-max-width);
   margin: 0 auto;
-  padding: 0 1em;
+  padding: 0 var(--container-padding);
 }
 
 .split {
@@ -96,7 +97,7 @@ h2 {
   flex-direction: column-reverse;
 }
 
-@media (min-width: 80em) {
+@media (min-width: 48em) {
   .split {
     flex-direction: row;
   }
@@ -138,19 +139,19 @@ h2 {
   padding-top: 1.5rem;
 }
 
-@media (min-width: 80em) {
+@media (min-width: 48em) {
   .primary-header,
   .primary-nav {
     position: static; 
   }
 
   .primary-header {
-    padding: 1em 5em;
+    padding: 1em calc(var(--container-padding) + var(--recipe-offset));
     background-color: var(--clr-neutral-100);
   }
 
   .primary-header a {
-    display: flex; /* TODO: otherwise moves a little bit to the top? */
+    display: flex;
   }
 
   .primary-nav {
@@ -168,22 +169,31 @@ h2 {
 /* Hero and intro */
 .hero {
   color: var(--clr-neutral-100);
+  padding-block: 10em;
   background-image: url(img/hero.jpg);
   background-size: cover;
   background-position: right center;
-  padding-block: 10em;
 }
 
 .intro {
   color: var(--clr-neutral-100);
   background-color: var(--clr-primary-400);
-  padding-bottom: 5em;
+  padding: 2.5em 0 var(--recipe-offset);
+}
+
+@media (min-width: 48em) {
+  .hero,
+  .intro {
+    padding-inline: var(--recipe-offset);
+  }
 }
 
 /* Recipe and ingredients */
 
 .recipe {
   background-color: var(--clr-neutral-100);
+  padding-top: 2.5em;
+  overflow: hidden;
 }
 
 .recipe ul,
@@ -205,10 +215,11 @@ h2 {
   border-bottom: 1px solid #EEF1F6;
 }
 
-@media (min-width: 40em) {
+@media (min-width: 48em) {
   .recipe {
-    margin: -3rem 5rem 0;
-    border-radius: 0.5rem 0.5rem 0 0;
+    /* using ems for margins to match padding of other sections and have text left-aligned among different sections */
+    margin: -3em max(var(--recipe-offset), calc(50% - var(--container-max-width)/2)) var(--recipe-offset);
+    border-radius: 0.5rem;
   }
 
   .burger-steps {
@@ -226,7 +237,7 @@ h2 {
   }
 }
 
-@media (min-width: 80em) {
+@media (min-width: 48em) {
   .ingredients {
     padding-left: 2em;
     border-left: 1px solid #EEF1F6;
@@ -241,9 +252,10 @@ h2 {
   padding-top: 2.5em;
   padding-bottom: 5em;
   background-color: var(--clr-primary-400);
+  box-shadow: 10em 0 0 var(--clr-primary-400), -10em 0 0 var(--clr-primary-400);
 }
 
-@media (min-width: 80em) {
+@media (min-width: 48em) {
   .primary-footer {
     padding-bottom: 2.5em;
   }
